--- a/files/style.css
+++ b/files/style.css
@@ -145,8 +145,8 @@
   cursor: pointer;
 }
 .booking:hover{
-  background-color:rgb(63, 78, 214);
-  border: 2px solid rgb(63, 78, 214);
+  background-color:transparent;
+  color: black;
   cursor: pointer;
 }
 .cover-footer{
@@ -330,8 +330,8 @@
   100% { opacity: 1; }
 }
 .about{
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 80px;
+  padding-bottom: 20%;
 }
 .about img{
   height: 100%;
@@ -343,43 +343,29 @@
 
 .about h2{
     font-size:40px;
-font-family: 'Carter One', cursive;    
-}
-.about-content h3{
-  font-family: 'Carter One', cursive;
+    font-weight: bold;
 }
 .about-content{
   padding:5%;
   box-shadow:  5px 10px 10px #2b2a2a77;
-  background-color: rgba(238, 235, 235, 0.932);
+  background-color: rgba(238, 235, 235, 0.233);
   border-radius: 5px;
   
 }
 .about-box{
   padding-top: 5%;
  
-  z-index: 999;
 }
-/*video*/
-.video-section{
- 
-	position:relative;
-	width:100%;
-	max-height:400px;
-	overflow:hidden;
-}
-#video-elem{
-	width:100%;
-}
-#info video{
-  padding-top:6% ;
-  background-attachment: fixed;
+.Aravind-photo img{
+  border-radius: 50px;
 }
 
-.info-video{
-  padding-bottom: 80px ;
+.box{
+  padding-bottom: 10%;
 }
-
+.pricing{
+  margin-top:20%;
+}
 /*Responsive design*/
 
 @media only screen and (max-width: 736px) {
@@ -490,7 +476,7 @@ font-family: 'Carter One', cursive;
       padding-top: 0px !important;
       padding-bottom: 15%  !important;
     }
-    
+  
 }
 /*Above 5" phone*/
 @media only screen and (max-width:580px)
@@ -522,6 +508,102 @@ font-family: 'Carter One', cursive;
   .mouse-button{
     padding-top: 5%;
     }
-  }  
+   
   
 }
+
+
+.container {
+  margin: auto;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.card {
+  width: 325px;
+  border-radius: 10px;
+  padding: 30px 20px 59px 20px;
+  border: 0;
+}
+
+.card1 {
+  background: linear-gradient(to bottom right, #FC56F6, #A356FD);
+  box-shadow: 3px 15px 30px rgba(171, 86, 252, 0.75);
+}
+
+.card2 {
+  background: linear-gradient(to bottom right, #56D0FD, #56FD7D);
+  box-shadow: 3px 15px 30px rgba(86, 247, 142, 0.75);
+}
+
+.card3 {
+  background: linear-gradient(to bottom right, #FDBD56, #FD56B6);
+  box-shadow: 3px 15px 30px rgba(253, 99, 169, 0.75);
+}
+
+.card h3 {
+  color: rgba(255, 255, 255, 0.3);
+  font-size: 40px;
+  font-weight: 900;
+  letter-spacing: 0px;
+}
+
+.card h4 {
+  color: white;
+  font-size: 40px;
+  margin-top: 53px;
+}
+
+.card h2 {
+  color: rgba(255, 255, 255, 0.15);
+  font-size: 118px;
+  font-weight: 900;
+  position: absolute;
+  margin-left: -6px;
+  pointer-events: none;
+}
+
+.card hr {
+  border-width: 1px;
+  border-color: rgba(255, 255, 255, 0.15);
+  margin-top: 53px;
+}
+
+.card p:first-of-type {
+  margin-top: 40px;
+}
+
+.card p {
+  color: white;
+  font-size: 24px;
+}
+
+.card p:nth-of-type(2) {
+  margin-top: 10px;
+  margin-bottom: 40px;
+}
+
+.card a {
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 12px 85px 11px 85px;
+  background-color: rgba(255, 255, 255, 0.3);
+  margin-left: 40px;
+  border-radius: 6px;
+  transition: background-color 0.5s;
+}
+
+.card a:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+@media only screen and (max-width: 1900px) {
+  .grid {
+    grid-template-columns: 100%;
+    grid-row-gap: 50px;
+  }
+}
+
+
