--- a/files/style.css
+++ b/files/style.css
@@ -531,7 +531,13 @@ font-weight: bold;
     }
 
     
-  }  
+  } 
+  @media only screen and (max-width:360px){
+    .details{
+      height: 160vh !important;
+    }
+  }
+   
 /*Iphone SE category*/
 @media only screen and (max-width:320px)
 {
@@ -541,102 +547,10 @@ font-weight: bold;
   .mouse-button{
     padding-top: 5%;
     }
-   
+    .details{
+      height: 190vh !important;
+
+    }
   
 }
-
-
-.container {
-  margin: auto;
-  padding-top: 50px;
-  padding-bottom: 50px;
-}
-
-.card {
-  width: 325px;
-  border-radius: 10px;
-  padding: 30px 20px 59px 20px;
-  border: 0;
-}
-
-.card1 {
-  background: linear-gradient(to bottom right, #FC56F6, #A356FD);
-  box-shadow: 3px 15px 30px rgba(171, 86, 252, 0.75);
-}
-
-.card2 {
-  background: linear-gradient(to bottom right, #56D0FD, #56FD7D);
-  box-shadow: 3px 15px 30px rgba(86, 247, 142, 0.75);
-}
-
-.card3 {
-  background: linear-gradient(to bottom right, #FDBD56, #FD56B6);
-  box-shadow: 3px 15px 30px rgba(253, 99, 169, 0.75);
-}
-
-.card h3 {
-  color: rgba(255, 255, 255, 0.3);
-  font-size: 40px;
-  font-weight: 900;
-  letter-spacing: 0px;
-}
-
-.card h4 {
-  color: white;
-  font-size: 40px;
-  margin-top: 53px;
-}
-
-.card h2 {
-  color: rgba(255, 255, 255, 0.15);
-  font-size: 118px;
-  font-weight: 900;
-  position: absolute;
-  margin-left: -6px;
-  pointer-events: none;
-}
-
-.card hr {
-  border-width: 1px;
-  border-color: rgba(255, 255, 255, 0.15);
-  margin-top: 53px;
-}
-
-.card p:first-of-type {
-  margin-top: 40px;
-}
-
-.card p {
-  color: white;
-  font-size: 24px;
-}
-
-.card p:nth-of-type(2) {
-  margin-top: 10px;
-  margin-bottom: 40px;
-}
-
-.card a {
-  color: white;
-  font-size: 20px;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 12px 85px 11px 85px;
-  background-color: rgba(255, 255, 255, 0.3);
-  margin-left: 40px;
-  border-radius: 6px;
-  transition: background-color 0.5s;
-}
-
-.card a:hover {
-  background-color: rgba(255, 255, 255, 0.5);
-}
-
-@media only screen and (max-width: 1900px) {
-  .grid {
-    grid-template-columns: 100%;
-    grid-row-gap: 50px;
-  }
-}
-
 
