--- a/files/style.css
+++ b/files/style.css
@@ -6,8 +6,7 @@
 
 /*Fonts*/
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic);
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script');
-@import url('https://fonts.googleapis.com/css?family=Anton|Carter+One');
+@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Merienda');
 @import url('https://fonts.googleapis.com/css?family=Laila|Merriweather|Roboto');
 /*Desktop view*/
 .background-cover{
@@ -24,7 +23,11 @@
 }
 .navbar-default.scrolled
 {
-  background:rgba(24, 51, 128, 0.952);
+  background:rgba(33, 64, 156, 0.952);
+  height: 60px;
+}
+.navbar .container-fluid{
+  padding-top: 10px;
 }
 .heading{
 	color: #2E9CCA;
@@ -334,36 +337,56 @@
   padding-top: 10%;
   margin-bottom: 35%;
 }
-.About h2{
-  font-family: 'Merriweather', serif;
-  font-weight: bold;
-  padding-bottom: 5%;
-}
 .About p{
-  font-family: 'Roboto', sans-serif;
-}
+  font-family: 'Merienda', cursive;}
 .About img{
 
   width: 100%;
 }
-.About-text{
-  padding:10%;
-}
-.About p{
+.About .text{
   padding-top: 10%;
+  padding-right: 20%;
+  padding-left: 20%;
+}
+.text h3{
+  font-size: 30px;
+  font-family: 'Kaushan Script', cursive;
+  padding-bottom: 5%;
+}
+.text h4{
+  font-size: 22px;
+}
+.text h4::before {
+  display: inline-block;
+  content: "";
+  border-top: .3rem solid rgb(58, 53, 65);
+  width: 20rem;
+  transform: translateY(-.6rem);
+}
+
+.text h5::before {
+  display: inline-block;
+  content: "";
+  border-top: .3rem solid rgb(58, 53, 65);
+  width: 13rem;
+  transform: translateY(-.6rem);
+  padding-bottom: 5%
+}
+.details .serv-cap{
+  color: rgb(252, 73, 29);
 }
 .details{
   margin-top: 20%;
   height: 90vh;
-  background-color: rgba(202, 199, 199, 0.329);    
+  background-color: rgba(20, 5, 88, 0.952);    
 }
 .details .icon{
-  color: rgba(48, 47, 45, 0.925);
+  color: rgba(241, 238, 232, 0.925);
   font-size: 70px;
 }
 .details h2{
-  color: rgba(48, 47, 45, 0.925);
-  padding-top: 7%;
+  color: rgba(252, 249, 245, 0.925);
+  padding-top: 10%;
   padding-bottom: 5%;
   font-family: 'Merriweather', serif;
 font-weight: bold;
@@ -373,8 +396,8 @@ font-weight: bold;
 
 }
 .details .serv-text{
-  padding-top: 6%;
-  color: rgba(48, 47, 45, 0.925);
+  padding-top: 5%;
+  color: rgba(182, 179, 173, 0.925);
   font-family: 'Laila', serif;
   font-weight: bold;
 }
@@ -519,6 +542,7 @@ font-weight: bold;
   background-color: black;
 }
 .footer h5{
+  color: rgba(211, 208, 208, 0.795);
   padding-top: 2%;
 }
 /*Responsive design*/
@@ -527,7 +551,14 @@ font-weight: bold;
     .navbar{
       padding-right: 0 !important;
     }
-  
+    .navbar-default.scrolled
+{
+  background:rgba(17, 48, 143, 0.986);
+  height: 0px;
+}
+  .navbar .container-fluid{
+    padding-top: 0px;
+  }
     .explore{
       display: block;
       font-size: 20px;
@@ -631,7 +662,14 @@ font-weight: bold;
       padding-top: 0px !important;
       padding-bottom: 15%  !important;
     }
-    
+    .About .text{
+      padding-top: 10%;
+      padding-right: 6%;
+      padding-left: 6%;
+    }
+    .text h3{
+      padding-bottom: 5%;
+    }
 }
 /*Above 5" phone*/
 @media only screen and (max-width:580px)
@@ -687,7 +725,7 @@ font-weight: bold;
       height: 500px;
     }
     .contact{
-      padding-top: 5% !important:
+      padding-top: 5% !important;
 
     }
     .contact h2{
@@ -699,7 +737,7 @@ font-weight: bold;
   } 
   @media only screen and (max-width:360px){
     .details{
-      height: 160vh !important;
+      height: 160vh ;
     }
   }
    
@@ -713,7 +751,7 @@ font-weight: bold;
     padding-top: 5%;
     }
     .details{
-      height: 190vh !important;
+      height: 200vh !important;
 
     }
     
