--- a/files/style.css
+++ b/files/style.css
@@ -734,10 +734,13 @@ font-weight: bold;
     .footer h5{
       padding-top: 6% !important;
     }
+    .details{
+      height: 180vh ;
+    }
   } 
   @media only screen and (max-width:360px){
     .details{
-      height: 160vh ;
+      height: 170vh ;
     }
   }
    
