--- a/files/style.css
+++ b/files/style.css
@@ -21,9 +21,10 @@
   border:0px;
   background:transparent;
 }
+
 .navbar-default.scrolled
 {
-  background:rgba(33, 64, 156, 0.952);
+  background:rgba(24, 23, 23, 0.822);
   height: 60px;
 }
 .navbar .container-fluid{
@@ -58,7 +59,7 @@
   font-size: 20px;
 }
 .link-color{
-	color: white;
+	color: rgb(238, 229, 229);
 	font-weight: bold;
 }
 .link-color:hover{
@@ -97,11 +98,12 @@
 */
 .cover-footer h4{
   font-size: 22px;
+  color: rgba(231, 230, 233, 0.507);
 }
 .cover-footer h4::before {
   display: inline-block;
   content: "";
-  border-top: .3rem solid rgb(58, 53, 65);
+  border-top: .2rem solid  rgba(231, 230, 233, 0.486);
   width: 10rem;
   margin: 0 1rem;
   transform: translateY(-.6rem);
@@ -182,8 +184,8 @@
   -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
   transform: rotate(45deg);
    
-  border-right: 2px solid rgb(36, 38, 58);
-  border-bottom: 2px solid rgb(36, 38, 58);
+  border-right: 2px solid rgba(231, 230, 233, 0.486) ;
+  border-bottom: 2px solid rgba(231, 230, 233, 0.486);
   margin: 0 0 3px 4px;
   
   width: 16px;
@@ -244,7 +246,7 @@
   width: 24px;
   border-radius: 14px;
   transform: none;
-  border: 2px solid rgb(36, 38, 58);
+  border: 2px solid rgba(231, 230, 233, 0.486);
   top: 170px;
 }
 
@@ -253,12 +255,12 @@
   width: 2px;
   display: block;
   margin: 5px auto;
-  background: rgb(36, 38, 58);
+  background: rgba(231, 230, 233, 0.486);
   position: relative;
   
   height: 4px;
   width: 4px;
-  border: 2px solid rgb(36, 38, 58);
+  border: 2px solid rgba(231, 230, 233, 0.486);
   -webkit-border-radius: 8px;
           border-radius: 8px;
 }
@@ -279,9 +281,9 @@
 
   100% {
     opacity: 0;
-    -webkit-transform: translateY(6px);
-    -ms-transform: translateY(6px);
-    transform: translateY(6px);
+    -webkit-transform: translateY(50px);
+    -ms-transform: translateY(50px);
+    transform: translateY(50px);
   }
 }
 @-moz-keyframes mouse-wheel {
@@ -333,218 +335,6 @@
   100% { opacity: 1; }
 }
 
-.About{
-  padding-top: 10%;
-  margin-bottom: 35%;
-}
-.About p{
-  font-family: 'Merienda', cursive;}
-.About img{
-
-  width: 100%;
-}
-.About .text{
-  padding-top: 10%;
-  padding-right: 20%;
-  padding-left: 20%;
-}
-.text h3{
-  font-size: 30px;
-  font-family: 'Kaushan Script', cursive;
-  padding-bottom: 5%;
-}
-.text h4{
-  font-size: 22px;
-}
-.text h4::before {
-  display: inline-block;
-  content: "";
-  border-top: .3rem solid rgb(58, 53, 65);
-  width: 20rem;
-  transform: translateY(-.6rem);
-}
-
-.text h5::before {
-  display: inline-block;
-  content: "";
-  border-top: .3rem solid rgb(58, 53, 65);
-  width: 13rem;
-  transform: translateY(-.6rem);
-  padding-bottom: 5%
-}
-.details .serv-cap{
-  color: rgb(252, 73, 29);
-}
-.details{
-  margin-top: 20%;
-  height: 90vh;
-  background-color: rgba(20, 5, 88, 0.952);    
-}
-.details .icon{
-  color: rgba(241, 238, 232, 0.925);
-  font-size: 70px;
-}
-.details h2{
-  color: rgba(252, 249, 245, 0.925);
-  padding-top: 10%;
-  padding-bottom: 5%;
-  font-family: 'Merriweather', serif;
-font-weight: bold;
-}
-.details h3{
-  color: rgba(48, 47, 45, 0.925);
-
-}
-.details .serv-text{
-  padding-top: 5%;
-  color: rgba(182, 179, 173, 0.925);
-  font-family: 'Laila', serif;
-  font-weight: bold;
-}
-.pricing{
-  padding-top: 5%;
-  margin-bottom: 5%;
-}
-.pricing h2{
-  padding-bottom: 5%;
-}
-.card {
-  position: relative;
-  max-width: 300px;
-  height: auto;
-  background: linear-gradient(-45deg, #fe0847, #feae3f);
-  border-radius: 15px;
-  margin: 0 auto;
-  padding: 40px 20px;
-  box-shadow: 0 10px 15px rgba(0,0,0,.3);
-  transition: .5s;
-  overflow: hidden;
-}
-
-.card:hover{
-  transform: scale(1.1);
-}
-
-.col-sm-4:nth-child(1) .card, .col-sm-4:nth-child(1) .card .title .fa {
-  background: linear-gradient(-45deg, #f403d1, #64b5f6);
-}
-
-.col-sm-4:nth-child(2) .card, .col-sm-4:nth-child(2) .card .title .fa {
-  background: linear-gradient(-45deg, #ffec61, #f321d7);
-}
-
-.col-sm-4:nth-child(3) .card, .col-sm-4:nth-child(3) .card .title .fa {
-  background: linear-gradient(-45deg, #24ff72, #9a4eff);
-}
-
-.card:before {
-  content: '';
-  position: absolute; 
-  bottom: 0; 
-  left: 0;
-  width: 100%;
-  height: 40%;
-  background: rgba(255,255,255,.1);
-  z-index: 1;
-  transform: skewY(-5deg) scale(1.2);
-}
-
-.title .fa {
-  color: #fff;
-  font-size: 60px;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  text-align: center;
-  line-height: 100px;
-  box-shadow: 0 10px 10px rgba(0,0,0,.2)
-}
-
-.title h2 {
-  position: relative;
-  margin: 20px 0 0;
-  padding: 0;
-  color: #fff;
-  font-size: 28px;
-  z-index: 2;
-}
-
-.price {
-  position: relative;
-  z-index: 2;
-}
-
-.price h4 {
-  margin: 0;
-  padding: 20px 0;
-  color: #fff;
-  font-size: 60px;
-}
-
-.option {
-  position: relative;
-  z-index: 2;
-}
-
-.option ul {
-  margin: 0;
-  padding: 0;
-}
-
-.option ul li {
-  margin: 0 0 10px;
-  padding: 0;
-  list-style: none;
-  color: #fff;
-  font-size: 16px;
-}
-
-.card a {
-  position: relative;
-  z-index: 2;
-  background:#fff;
-  color: #2c3e50;
-  width: 150px;
-  height: 40px;
-  display: block;
-  line-height: 40px;
-  border-radius: 40px;
-  font-size: 16px;
-  text-align: center;
-  margin: 20px auto 0;
-  box-shadow: 0 5px 10px rgba(0,0,0,.2);
-}
-
-.card a:hover{
-  text-decoration: none;
-  background: #ecf0f1;
-}
-
-.contact iframe{
-  padding: 6%;
-  width: 100%;
-  height: 500px;
-}
-.contact{
-  padding-top: 6%;
-  margin-bottom: 40%;
-}
-.contact .address-typo{
-  padding-top: 3%;
-  padding-bottom: 10%;
-}
-.contact .address{
-  padding: 5%;
-}
-
-.footer{
-  height: 10vh;
-  background-color: black;
-}
-.footer h5{
-  color: rgba(211, 208, 208, 0.795);
-  padding-top: 2%;
-}
 /*Responsive design*/
 
 @media only screen and (max-width: 736px) {
@@ -553,7 +343,7 @@ font-weight: bold;
     }
     .navbar-default.scrolled
 {
-  background:rgba(17, 48, 143, 0.986);
+  background:black;
   height: 0px;
 }
   .navbar .container-fluid{
@@ -599,7 +389,7 @@ font-weight: bold;
     }
     .collapsing,
     .in {
-        background-color:  rgba(24, 51, 128, 0.952);
+        background-color:  rgba(12, 12, 12, 0.952);
     }
     .collapsing ul>li>a,
     .in ul>li>a {
@@ -650,25 +440,13 @@ font-weight: bold;
     .cover-footer h4::before {
       display: inline-block;
       content: "";
-      border-top: .1rem solid rgb(58, 53, 65);
+      border-top: .1rem solid rgba(231, 230, 233, 0.486);
       width: 4rem;
       margin: 0 rem;
       transform: translateY(-.5rem);
     }
     .cover-footer{
       padding-left: 2%;
-    }
-    .info-video{
-      padding-top: 0px !important;
-      padding-bottom: 15%  !important;
-    }
-    .About .text{
-      padding-top: 10%;
-      padding-right: 6%;
-      padding-left: 6%;
-    }
-    .text h3{
-      padding-bottom: 5%;
     }
 }
 /*Above 5" phone*/
@@ -690,53 +468,6 @@ font-weight: bold;
     .cover-footer{
       padding-left: 4% !important;
     }
-    .details{
-      height: 155vh;
-    }
-    .details h2{
-      padding-top: 15% !important;
-      padding-bottom: 5% !important;
-    
-    }
-    .grid{
-      padding-bottom: 10%;
-    }
-    .box{
-      padding-bottom: 5%;
-    }
-        .contact iframe{
-      padding: 6%;
-      width: 100%;
-      height: 400px !important;
-    }
-    .pricing{
-      padding-top: 15% !important;
-    }
-    .pricing h2{
-      padding-bottom: 5% !important;
-
-    }
-    .card1{
-      padding-bottom: 10% !important;
-    }
-    .contact iframe{
-      padding: 2% !important;
-      width: 100%;
-      height: 500px;
-    }
-    .contact{
-      padding-top: 5% !important;
-
-    }
-    .contact h2{
-      padding-bottom: 5% !important;
-    }
-    .footer h5{
-      padding-top: 6% !important;
-    }
-    .details{
-      height: 180vh ;
-    }
   } 
   @media only screen and (max-width:360px){
     .details{
@@ -752,10 +483,6 @@ font-weight: bold;
   }
   .mouse-button{
     padding-top: 5%;
-    }
-    .details{
-      height: 200vh !important;
-
     }
     
 }
